--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 	<head>
 	</head>
 	<body>
-		<h3>CS184/284A Homework Webpages</h3>
+		<h3>CS184/284A Homework Webpages for Sriram Srivatsan</h3>
 		<br><br>
-		<a href="/hw1/index.html">Homework 1</a>
+		<a href="/hw1/index.html">Homework 1 - Rasterizer</a>
 		<br><br>
 		<a href="/hw2/index.html">Homework 2</a>
 		<br><br>
