--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<body>
 		<h3>CS184/284A Homework Webpages for Sriram Srivatsan</h3>
 		<br><br>
-		<a href="/hw1/index.html">Homework 1 - Rasterizer</a>
+		<a href="/hw1/index.html">Homework 1</a>
 		<br><br>
 		<a href="/hw2/index.html">Homework 2</a>
 		<br><br>
