--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 	</head>
 	<body>
-		<h3>CS184/284A Homework Webpages for Sriram Srivatsan</h3>
+		<h3>CS184/284A Homework Webpages</h3>
 		<br><br>
 		<a href="/hw1/index.html">Homework 1</a>
 		<br><br>
