--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		Sriram Srivatsan - cs184 Homework Pages
 	</head>
 	<body>
 		<h3>CS184/284A Homework Webpages for Sriram Srivatsan</h3>
