--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<Title>Sriram Srivatsan cs184</Title>
+		<Title>Sriram Srivatsan CS184 Pages</Title>
 	</head>
 	<body>
 		<h3>CS184/284A Homework Webpages for Sriram Srivatsan</h3>
