--- a/hw1/index.html
+++ b/hw1/index.html
@@ -3,6 +3,11 @@
 		<Title>Homework 1 - Rasterizer</Title>
 	</head>
 	<body>
-		This is a test
+		<h3><b>Single Color Triangles</b></h3>
+		<h3><b>Antialiasing by Supersampling</b></h3>
+		<h3><b>Transforms</b></h3>
+		<h3><b>Barycentric Coordinates</b></h3>
+		<h3><b>Pixel Sampling for Textures</b></h3>
+		<h3><b>Level Sampling with Mipmaps for Textures</b></h3>
 	</body>
 </html>
