--- a/hw1/index.html
+++ b/hw1/index.html
@@ -3,6 +3,8 @@
 		<Title>Homework 1 - Rasterizer</Title>
 	</head>
 	<body>
+		<h1>Homework 1 - <b>Rasterizer</b></h1>
+		<h2>by Sriram Srivatsan and Jaron Erba</h2>
 		<h3><b>Single Color Triangles</b></h3>
 		<h3><b>Antialiasing by Supersampling</b></h3>
 		<h3><b>Transforms</b></h3>
