--- a/hw1/index.html
+++ b/hw1/index.html
@@ -3,13 +3,62 @@
 		<Title>Homework 1 - Rasterizer</Title>
 	</head>
 	<body>
-		<h1>Homework 1 - <b>Rasterizer</b></h1>
-		<h2>by Sriram Srivatsan and Jaron Erba</h2>
+		<h2 style="color: red">Homework 1 - <b>Rasterizer</b></h2>
+		<h5 style="color: gray">by Sriram Srivatsan and Jaron Erba</h5>
+		<ul class="dashed">
+			<li> Walk through how you rasterize triangles in your own words: <i>todo</i></li>
+			<li> Explain how your algorithm is no worse than one that checks each sample within the bounding box of the triangle: <i>todo</i></li>
+			<li> Show a png screenshot of basic/test4.svg with the default viewing parameters and with the pixel inspector centered on an interesting part of the scene: <i>todo</i></li>
+			<li> Extra credit: Explain any special optimizations you did beyond simple bounding box triangle rasterization, with a timing comparison table: <i>todo</i></li>
+		</ul>
+		<br>
 		<h3><b>Single Color Triangles</b></h3>
+		<ul class="dashed">
+			<li> Walk through how you rasterize triangles in your own words: <i>todo</i></li>
+			<li> Explain how your algorithm is no worse than one that checks each sample within the bounding box of the triangle: <i>todo</i></li>
+			<li> Show a png screenshot of basic/test4.svg with the default viewing parameters and with the pixel inspector centered on an interesting part of the scene: <i>todo</i></li>
+			<li> Extra credit: Explain any special optimizations you did beyond simple bounding box triangle rasterization, with a timing comparison table: <i>todo</i></li>
+		</ul>
+		<br>
 		<h3><b>Antialiasing by Supersampling</b></h3>
+		<ul class="dashed">
+			<li> Walk through how you rasterize triangles in your own words: <i>todo</i></li>
+			<li> Explain how your algorithm is no worse than one that checks each sample within the bounding box of the triangle: <i>todo</i></li>
+			<li> Show a png screenshot of basic/test4.svg with the default viewing parameters and with the pixel inspector centered on an interesting part of the scene: <i>todo</i></li>
+			<li> Extra credit: Explain any special optimizations you did beyond simple bounding box triangle rasterization, with a timing comparison table: <i>todo</i></li>
+		</ul>
+		<br>
 		<h3><b>Transforms</b></h3>
+		<ul class="dashed">
+			<li> Walk through how you rasterize triangles in your own words: <i>todo</i></li>
+			<li> Explain how your algorithm is no worse than one that checks each sample within the bounding box of the triangle: <i>todo</i></li>
+			<li> Show a png screenshot of basic/test4.svg with the default viewing parameters and with the pixel inspector centered on an interesting part of the scene: <i>todo</i></li>
+			<li> Extra credit: Explain any special optimizations you did beyond simple bounding box triangle rasterization, with a timing comparison table: <i>todo</i></li>
+		</ul>
+		<br>
 		<h3><b>Barycentric Coordinates</b></h3>
+		<ul class="dashed">
+			<li> Walk through how you rasterize triangles in your own words: <i>todo</i></li>
+			<li> Explain how your algorithm is no worse than one that checks each sample within the bounding box of the triangle: <i>todo</i></li>
+			<li> Show a png screenshot of basic/test4.svg with the default viewing parameters and with the pixel inspector centered on an interesting part of the scene: <i>todo</i></li>
+			<li> Extra credit: Explain any special optimizations you did beyond simple bounding box triangle rasterization, with a timing comparison table: <i>todo</i></li>
+		</ul>
+		<br>
 		<h3><b>Pixel Sampling for Textures</b></h3>
+		<ul class="dashed">
+			<li> Walk through how you rasterize triangles in your own words: <i>todo</i></li>
+			<li> Explain how your algorithm is no worse than one that checks each sample within the bounding box of the triangle: <i>todo</i></li>
+			<li> Show a png screenshot of basic/test4.svg with the default viewing parameters and with the pixel inspector centered on an interesting part of the scene: <i>todo</i></li>
+			<li> Extra credit: Explain any special optimizations you did beyond simple bounding box triangle rasterization, with a timing comparison table: <i>todo</i></li>
+		</ul>
+		<br>
 		<h3><b>Level Sampling with Mipmaps for Textures</b></h3>
+		<ul class="dashed">
+			<li> Walk through how you rasterize triangles in your own words: <i>todo</i></li>
+			<li> Explain how your algorithm is no worse than one that checks each sample within the bounding box of the triangle: <i>todo</i></li>
+			<li> Show a png screenshot of basic/test4.svg with the default viewing parameters and with the pixel inspector centered on an interesting part of the scene: <i>todo</i></li>
+			<li> Extra credit: Explain any special optimizations you did beyond simple bounding box triangle rasterization, with a timing comparison table: <i>todo</i></li>
+		</ul>
+		<br>
 	</body>
 </html>
