--- a/hw1/index.html
+++ b/hw1/index.html
@@ -3,15 +3,9 @@
 		<Title>Homework 1 - Rasterizer</Title>
 	</head>
 	<body>
-		<h2 style="color: red">Homework 1 - <b>Rasterizer</b></h2>
-		<h5 style="color: gray">by Sriram Srivatsan and Jaron Erba</h5>
-		<ul class="dashed">
-			<li> Walk through how you rasterize triangles in your own words: <i>todo</i></li>
-			<li> Explain how your algorithm is no worse than one that checks each sample within the bounding box of the triangle: <i>todo</i></li>
-			<li> Show a png screenshot of basic/test4.svg with the default viewing parameters and with the pixel inspector centered on an interesting part of the scene: <i>todo</i></li>
-			<li> Extra credit: Explain any special optimizations you did beyond simple bounding box triangle rasterization, with a timing comparison table: <i>todo</i></li>
-		</ul>
-		<br>
+		<h2>Homework 1 - <b>Rasterizer</b></h2>
+		<h5 style="color: gray">by Sriram Srivatsan &#40;sriram.srivatsan &#40;at&#41;&#41; and Jaron Erba &#40;jaronerba &#40;at&#41;&#41;</h5>
+		
 		<h3><b>Single Color Triangles</b></h3>
 		<ul class="dashed">
 			<li> Walk through how you rasterize triangles in your own words: <i>todo</i></li>
@@ -22,42 +16,42 @@
 		<br>
 		<h3><b>Antialiasing by Supersampling</b></h3>
 		<ul class="dashed">
-			<li> Walk through how you rasterize triangles in your own words: <i>todo</i></li>
-			<li> Explain how your algorithm is no worse than one that checks each sample within the bounding box of the triangle: <i>todo</i></li>
-			<li> Show a png screenshot of basic/test4.svg with the default viewing parameters and with the pixel inspector centered on an interesting part of the scene: <i>todo</i></li>
-			<li> Extra credit: Explain any special optimizations you did beyond simple bounding box triangle rasterization, with a timing comparison table: <i>todo</i></li>
+			<li> Walk through your supersampling algorithm and data structures. Why is supersampling useful? What modifications did you make to the rasterization pipeline in the process? Explain how you used supersampling to antialias your triangles: <i>todo</i></li>
+			<li> Show png screenshots of basic/test4.svg with the default viewing parameters and sample rates 1, 4, and 16 to compare them side-by-side. Position the pixel inspector over an area that showcases the effect dramatically; for example, a very skinny triangle corner. Explain why these results are observed: <i>todo</i></li>
+			<li> Extra credit: If you implemented alternative antialiasing methods, describe them and include comparison pictures demonstrating the difference between your method and grid-based supersampling: <i>todo</i></li>
 		</ul>
 		<br>
 		<h3><b>Transforms</b></h3>
 		<ul class="dashed">
-			<li> Walk through how you rasterize triangles in your own words: <i>todo</i></li>
-			<li> Explain how your algorithm is no worse than one that checks each sample within the bounding box of the triangle: <i>todo</i></li>
-			<li> Show a png screenshot of basic/test4.svg with the default viewing parameters and with the pixel inspector centered on an interesting part of the scene: <i>todo</i></li>
-			<li> Extra credit: Explain any special optimizations you did beyond simple bounding box triangle rasterization, with a timing comparison table: <i>todo</i></li>
+			<li> Explain what you were trying to do with cubeman in words: <i>todo</i></li>
+			<li> Extra Credit: What additional feature did you add: <i>todo</i></li>
 		</ul>
 		<br>
 		<h3><b>Barycentric Coordinates</b></h3>
 		<ul class="dashed">
-			<li> Walk through how you rasterize triangles in your own words: <i>todo</i></li>
-			<li> Explain how your algorithm is no worse than one that checks each sample within the bounding box of the triangle: <i>todo</i></li>
-			<li> Show a png screenshot of basic/test4.svg with the default viewing parameters and with the pixel inspector centered on an interesting part of the scene: <i>todo</i></li>
-			<li> Extra credit: Explain any special optimizations you did beyond simple bounding box triangle rasterization, with a timing comparison table: <i>todo</i></li>
+			<li> Explain barycentric coordinates in your own words and use an image to aid you in your explanation: <i>todo</i></li>
+			<li> Show a png screenshot of svg/basic/test7.svg with default viewing parameters and sample rate 1: <i>todo</i></li>
 		</ul>
 		<br>
 		<h3><b>Pixel Sampling for Textures</b></h3>
 		<ul class="dashed">
-			<li> Walk through how you rasterize triangles in your own words: <i>todo</i></li>
-			<li> Explain how your algorithm is no worse than one that checks each sample within the bounding box of the triangle: <i>todo</i></li>
-			<li> Show a png screenshot of basic/test4.svg with the default viewing parameters and with the pixel inspector centered on an interesting part of the scene: <i>todo</i></li>
-			<li> Extra credit: Explain any special optimizations you did beyond simple bounding box triangle rasterization, with a timing comparison table: <i>todo</i></li>
+			<li> Explain pixel sampling in your own words and describe how you implemented it to perform texture mapping: <i>todo</i></li>
+			<li> Show and compare four png screenshots using nearest sampling at 1 sample per pixel, nearest sampling at 16 samples per pixel, bilinear sampling at 1 sample per pixel, and bilinear sampling at 16 samples per pixel: <i>todo</i></li>
+			<li> Comment on the relative differences. Discuss when there will be a large difference between the two methods and why: <i>todo</i></li>
 		</ul>
 		<br>
 		<h3><b>Level Sampling with Mipmaps for Textures</b></h3>
 		<ul class="dashed">
-			<li> Walk through how you rasterize triangles in your own words: <i>todo</i></li>
-			<li> Explain how your algorithm is no worse than one that checks each sample within the bounding box of the triangle: <i>todo</i></li>
-			<li> Show a png screenshot of basic/test4.svg with the default viewing parameters and with the pixel inspector centered on an interesting part of the scene: <i>todo</i></li>
-			<li> Extra credit: Explain any special optimizations you did beyond simple bounding box triangle rasterization, with a timing comparison table: <i>todo</i></li>
+			<li> Explain level sampling in your own words and describe how you implemented it for texture mapping: <i>todo</i></li>
+			<li> Describe the tradeoffs between speed, memory usage, and antialiasing power between the three various techniques: <i>todo</i></li>
+			<li> Using a png file you find yourself, show us four versions of the image, using the combinations of L_ZERO and P_NEAREST, L_ZERO and P_LINEAR, L_NEAREST and P_NEAREST, as well as L_NEAREST and P_LINEAR: <i>todo</i></li>
+			<li> Extra credit: If you implemented any extra filtering methods, describe them and show comparisons between your results with the other above methods: <i>todo</i></li>
+		</ul>
+		<br>
+		<h3><b>Extra Credit</b></h3>
+		<ul class="dashed">
+			<li> Save your best svg file as competition.svg in your docs/ directory, and show us a 800x800 png screenshot of it in your write-up: <i>todo</i></li>
+			<li> Explain how you did it. If you wrote a script to generate procedural svg files, include it in your submission in the src/ directory and briefly explain how it works: <i>todo</i></li>
 		</ul>
 		<br>
 	</body>
