--- a/hw1/index.html
+++ b/hw1/index.html
@@ -5,6 +5,7 @@
 	<body>
 		<h2>Homework 1 - <b>Rasterizer</b></h2>
 		<h5 style="color: gray">by Sriram Srivatsan &#40;sriram.srivatsan &#40;at&#41;&#41; and Jaron Erba &#40;jaronerba &#40;at&#41;&#41;</h5>
+		<a style="color: gray", href="https://cal-cs184-student.github.io/hw-webpages-sp24-ElShroomster/">https://cal-cs184-student.github.io/hw-webpages-sp24-ElShroomster/</a>
 		
 		<h3><b>Single Color Triangles</b></h3>
 		<ul class="dashed">
