Update index.html to include css

--- a/hw1/index.html
+++ b/hw1/index.html
@@ -1,5 +1,8 @@
 <html>
 	<head>
+ 		 <link rel="stylesheet" href="styling.css">
+	</head>
+	<head>
 		<Title>Homework 1 - Rasterizer</Title>
 	</head>
 	<body>
