--- a/hw1/index.html
+++ b/hw1/index.html
@@ -6,7 +6,7 @@
 		<Title>Homework 1 - Rasterizer</Title>
 	</head>
 	<body>
-		<b><h2>Homework 1 - <b>Rasterizer</b></h2></b>
+		<h2>Homework 1 - <b>Rasterizer</b></h2>
 		<h5 style="color: gray">by Sriram Srivatsan &#40;sriram.srivatsan &#40;at&#41; berkeley.edu&#41; and Jaron Erba &#40;jaronerba &#40;at&#41; berkeley.edu&#41;</h5>
 		<a style="color: gray", href="https://cal-cs184-student.github.io/hw-webpages-sp24-ElShroomster/">https://cal-cs184-student.github.io/hw-webpages-sp24-ElShroomster/</a>
 		
