--- a/hw1/index.html
+++ b/hw1/index.html
@@ -1,8 +1,10 @@
 <html>
+	<div class="container">
+  		<h1>Header</h1>
+  		<img src="https://img.itch.zone/aW1nLzEzMzk5NDA1LnBuZw==/original/Rt%2FSOC.png" alt="Description">
+	</div>
 	<head>
- 		 <link rel="stylesheet" href="styling.css">
-	</head>
-	<head>
+ 		<link rel="stylesheet" href="styling.css">
 		<Title>Homework 1 - Rasterizer</Title>
 	</head>
 	<body>
