--- a/hw1/index.html
+++ b/hw1/index.html
@@ -1,6 +1,6 @@
 <html>
 	<div class="container">
-  		<img src="https://img.itch.zone/aW1nLzEzMzk5NDA1LnBuZw==/original/Rt%2FSOC.png" width="1080" height="300"" alt="Description">
+  		<img src="https://img.itch.zone/aW1nLzEzMzk5NDA1LnBuZw==/original/Rt%2FSOC.png" width="1920" " alt="Description">
 	</div>
 	<head>
  		<link rel="stylesheet" href="styling.css">
