--- a/hw1/index.html
+++ b/hw1/index.html
@@ -12,7 +12,7 @@
 		<a style="color: gray", href="https://cal-cs184-student.github.io/hw-webpages-sp24-ElShroomster/">https://cal-cs184-student.github.io/hw-webpages-sp24-ElShroomster/</a>
 		
 		<h3><b>Single Color Triangles</b></h3>
-		<ul class="dashed">
+		<ul style="color: white", class="dashed">
 			<li> Walk through how you rasterize triangles in your own words: <i>todo</i></li>
 			<li> Explain how your algorithm is no worse than one that checks each sample within the bounding box of the triangle: <i>todo</i></li>
 			<li> Show a png screenshot of basic/test4.svg with the default viewing parameters and with the pixel inspector centered on an interesting part of the scene: <i>todo</i></li>
