--- a/hw1/index.html
+++ b/hw1/index.html
@@ -20,33 +20,33 @@
 		</ul>
 		<br>
 		<h3><b>Antialiasing by Supersampling</b></h3>
-		<ul class="dashed">
+		<ul style="color: white", class="dashed">
 			<li> Walk through your supersampling algorithm and data structures. Why is supersampling useful? What modifications did you make to the rasterization pipeline in the process? Explain how you used supersampling to antialias your triangles: <i>todo</i></li>
 			<li> Show png screenshots of basic/test4.svg with the default viewing parameters and sample rates 1, 4, and 16 to compare them side-by-side. Position the pixel inspector over an area that showcases the effect dramatically; for example, a very skinny triangle corner. Explain why these results are observed: <i>todo</i></li>
 			<li> Extra credit: If you implemented alternative antialiasing methods, describe them and include comparison pictures demonstrating the difference between your method and grid-based supersampling: <i>todo</i></li>
 		</ul>
 		<br>
 		<h3><b>Transforms</b></h3>
-		<ul class="dashed">
+		<ul style="color: white", class="dashed">
 			<li> Explain what you were trying to do with cubeman in words: <i>todo</i></li>
 			<li> Extra Credit: What additional feature did you add: <i>todo</i></li>
 		</ul>
 		<br>
 		<h3><b>Barycentric Coordinates</b></h3>
-		<ul class="dashed">
+		<ul style="color: white", class="dashed">
 			<li> Explain barycentric coordinates in your own words and use an image to aid you in your explanation: <i>todo</i></li>
 			<li> Show a png screenshot of svg/basic/test7.svg with default viewing parameters and sample rate 1: <i>todo</i></li>
 		</ul>
 		<br>
 		<h3><b>Pixel Sampling for Textures</b></h3>
-		<ul class="dashed">
+		<ul style="color: white", class="dashed">
 			<li> Explain pixel sampling in your own words and describe how you implemented it to perform texture mapping: <i>todo</i></li>
 			<li> Show and compare four png screenshots using nearest sampling at 1 sample per pixel, nearest sampling at 16 samples per pixel, bilinear sampling at 1 sample per pixel, and bilinear sampling at 16 samples per pixel: <i>todo</i></li>
 			<li> Comment on the relative differences. Discuss when there will be a large difference between the two methods and why: <i>todo</i></li>
 		</ul>
 		<br>
 		<h3><b>Level Sampling with Mipmaps for Textures</b></h3>
-		<ul class="dashed">
+		<ul style="color: white", class="dashed">
 			<li> Explain level sampling in your own words and describe how you implemented it for texture mapping: <i>todo</i></li>
 			<li> Describe the tradeoffs between speed, memory usage, and antialiasing power between the three various techniques: <i>todo</i></li>
 			<li> Using a png file you find yourself, show us four versions of the image, using the combinations of L_ZERO and P_NEAREST, L_ZERO and P_LINEAR, L_NEAREST and P_NEAREST, as well as L_NEAREST and P_LINEAR: <i>todo</i></li>
@@ -54,7 +54,7 @@
 		</ul>
 		<br>
 		<h3><b>Extra Credit</b></h3>
-		<ul class="dashed">
+		<ul style="color: white", class="dashed">
 			<li> Save your best svg file as competition.svg in your docs/ directory, and show us a 800x800 png screenshot of it in your write-up: <i>todo</i></li>
 			<li> Explain how you did it. If you wrote a script to generate procedural svg files, include it in your submission in the src/ directory and briefly explain how it works: <i>todo</i></li>
 		</ul>
