--- a/hw1/index.html
+++ b/hw1/index.html
@@ -1,6 +1,6 @@
 <html>
 	<div class="container">
-  		<img src="https://github.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/blob/d45d1ea6fed135a93f1845619dd6a3dc34e6b68a/hw1/radicalrasterizers.png" width="1920" " alt="Description">
+  		<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/d45d1ea6fed135a93f1845619dd6a3dc34e6b68a/hw1/radicalrasterizers.png" width="1920" " alt="Description">
 	</div>
 	<head>
  		<link rel="stylesheet" href="styling.css">
