--- a/hw1/index.html
+++ b/hw1/index.html
@@ -1,6 +1,6 @@
 <html>
 	<div class="container">
-  		<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw1/radical2.png" alt="Description" class="Center">
+  		<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw1/radical2.png" alt="Description" class="center">
 	</div>
 	<head>
  		<link rel="stylesheet" href="styling.css">
