--- a/hw1/index.html
+++ b/hw1/index.html
@@ -24,6 +24,8 @@
 		<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw1/red2x2.png" alt="Description" class="column">
 		<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw1/red4x4.png" alt="Description" class="column">
 		<br>
+		<p style="color: white; width: 75%">    <i>Todo: Exta credit</i></p>
+		<br>
 		<h3><b>Transforms</b></h3>
 		<br>
 		<h3><b>Barycentric Coordinates</b></h3>
