--- a/hw1/index.html
+++ b/hw1/index.html
@@ -8,7 +8,9 @@
 	</head>
 	<body>
 		<h2>Homework 1 - <b>Rasterizer</b></h2>
-		<h5 style="color: #212427" class="center"> by Sriram Srivatsan &#40;sriram.srivatsan &#40;at&#41; berkeley.edu&#41; and Jaron Erba &#40;jaronerba &#40;at&#41; berkeley.edu&#41;</h5>
+		<center>
+		<h5 style="color: #212427">by Sriram Srivatsan &#40;sriram.srivatsan &#40;at&#41; berkeley.edu&#41; and Jaron Erba &#40;jaronerba &#40;at&#41; berkeley.edu&#41;</h5>
+		</center>
 		<a style="color: #212427", href="https://cal-cs184-student.github.io/hw-webpages-sp24-ElShroomster/">https://cal-cs184-student.github.io/hw-webpages-sp24-ElShroomster/</a>
 		
 		<h3><b>Single Color Triangles</b></h3>
