--- a/hw1/index.html
+++ b/hw1/index.html
@@ -1,7 +1,7 @@
 <html>
-	<!--<div class="container">
-  		<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw1/radical_rasterizers.png" alt="Radical Rasterizers">
-	</div>-->
+	<div class="container">
+  		<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw1/radical3.png" alt="Radical Rasterizers">
+	</div>
 	<head>
  		<link rel="stylesheet" href="styling.css">
 		<Title>Homework 1 - Rasterizer</Title>
