--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 	<head>
 		<Title>Sriram Srivatsan CS184 Pages</Title>
+ 		<link rel="stylesheet" href="hw1/styling.css">
+	</head>
+		
 	</head>
 	<body>
 		<h3>CS184/284A Homework Webpages for Sriram Srivatsan</h3>
