--- a/hw1/index.html
+++ b/hw1/index.html
@@ -39,7 +39,8 @@
 		<br>
 		<h3><b>Transforms</b></h3>
 		<p style="color: #212427; width: 100%">    Transforms were honestly pretty easy. All we had to do was change the translation/rotation/scale functions to return a matrix that when multiplied by our current vector in homogeneous coordinates would result in a transformed vector. By modifying the cubeman svg, we were able to make him elastic by stretching his limbs out. I honestly think he's very good at yoga :)</p>
-		<p style="color: #212427; width: 100%">    <i>Todo: transform and extra credit</i></p>
+		<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw1/images/robot_stretch.png" alt="stretchy robot" class="center">
+		<p style="color: #212427; width: 100%">    <i>Todo: extra credit</i></p>
 		<br>
 		<h3><b>Barycentric Coordinates</b></h3>
 		<p style="color: #212427; width: 100%">    Barycentric coordinates are a neat way to represent the location of a point relative to the vertices of a triangle. Using this method, we were able to represent our point by fractions, each fraction describing how close our point was to a vertex compared to the opposing edge. This allowed us to use three different colors on each of the vertices, and divide them up so we could get a cool gradient. The hardest part about this assignment was the amount of arithmetic involved. Finding the values wasn't too bad, but brainstorming to making the algorithm efficient took up a lot of energy. Nobody really wants to do a thousand multiplies and adds for 20 pixels. Below is a visual description of barycentric coordinates I stole from <a href="https://mathematica.stackexchange.com/q/246858" style="display: inline">Mathematics Stack Exchange</a>:</p>
