--- a/hw1/index.html
+++ b/hw1/index.html
@@ -34,6 +34,17 @@
 				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw1/images/red4x4.png" alt="svg4 Less Aliased">
 			</div>
 		</div>
+		<div class="row">
+  			<div class="column">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw1/images/purple1x1.png" alt="svg4 Aliased">
+			</div>
+			<div class="column">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw1/images/purple2x2.png" alt="svg4 Slightly Aliased">
+			</div>
+			<div class="column">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw1/images/purple4x4.png" alt="svg4 Less Aliased">
+			</div>
+		</div>
 		<br>
 		<p style="color: #212427; width: 100%">    <i>Todo: Exta credit</i></p>
 		<br>
