--- a/hw1/index.html
+++ b/hw1/index.html
@@ -3,7 +3,7 @@
   		<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw1/images/radical_rasterizers_logo.png" alt="Radical Rasterizers">
 	</div>
 	<head>
- 		<link rel="stylesheet" href="styling.css">
+ 		<link rel="stylesheet" href="CC Starter CSS.css">
 		<Title>Homework 1 - Rasterizer</Title>
 	</head>
 	<body>
