--- a/hw1/index.html
+++ b/hw1/index.html
@@ -3,13 +3,14 @@
   		<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw1/images/radical_rasterizers_logo.png" alt="Radical Rasterizers">
 	</div>
 	<head>
- 		<link rel="stylesheet" href="CC Starter CSS.css">
+ 		<link rel="stylesheet" href="styling.css">
+		<link rel="stylesheet" href="github-markdown.css">
 		<Title>Homework 1 - Rasterizer</Title>
 	</head>
 	<body>
 		<h2>Homework 1 - <b>Rasterizer</b></h2>
 		<center>
-		<h5 style="color: #212427">by Sriram Srivatsan &#40;sriram.srivatsan &#40;at&#41; berkeley.edu&#41; and Jaron Erba &#40;jaronerba &#40;at&#41; berkeley.edu&#41;</h5>
+		<h5 style="color: #212427">by *Sriram Srivatsan* &#40;sriram.srivatsan &#40;at&#41; berkeley.edu&#41; and Jaron Erba &#40;jaronerba &#40;at&#41; berkeley.edu&#41;</h5>
 		</center>
 		<a style="color: #212427", href="https://cal-cs184-student.github.io/hw-webpages-sp24-ElShroomster/"> https://cal-cs184-student.github.io/hw-webpages-sp24-ElShroomster/ </a>
 
