--- a/hw2/index.html
+++ b/hw2/index.html
@@ -1,6 +1,6 @@
 <html>
 	<div class="container">
-  		<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw1/images/radical_rasterizers_logo.png" alt="Radical Rasterizers">
+  		<img src="https://github.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/blob/master/hw2/malevolent.png?raw=true" alt="Malevolent Meshes">
 	</div>
 	<head>
  		<link rel="stylesheet" href="styling.css">
