--- a/hw2/index.html
+++ b/hw2/index.html
@@ -7,21 +7,20 @@
 		<Title>Homework 2 - Geometric Modeling </Title>
 	</head>
 	<body>
-		<h2>Homework 1 - <b>Geometric Modeling</b></h2>
+		<h2>Homework 2 - <b>Geometric Modeling</b></h2>
 		<center>
 		<h5 style="color: #DBDEE1">by Sriram Srivatsan &#40;sriram.srivatsan &#40;at&#41; berkeley.edu&#41; and Jaron Erba &#40;jaronerba &#40;at&#41; berkeley.edu&#41;</h5>
 		</center>
-		<a style="color: #DBDEE1", href="https://cal-cs184-student.github.io/hw-webpages-sp24-ElShroomster/"> https://cal-cs184-student.github.io/hw-webpages-sp24-ElShroomster/ </a>
+		<a style="color: #DBDEE1", href="https://cal-cs184-student.github.io/hw-webpages-sp24-ElShroomster/"> Main Page </a>
 
-		<h3><b>Single Color Triangles</b></h3>
-		<p style="color: #DBDEE1; width: 100%">    To rasterize a triangle, we check a grid pixel by pixel to test whether each point lies within the three triangle vertices. We do this mathematically by creating a normal vector pointing inwards from each of our edges, and testing whether the dot product of a vector between our point and the vertex and the normal vector is greater than zero. Instead of sampling the entire screen space, we limited the number of tests we do per triangle to just the ones inside the bounding box of the triangle. To do this, we simply sampled each pixel between the leftmost and rightmost x-coordinate in our triangle’s vertices, and likewise for the highest and lowest y-coordinate. In this process, we faced two challenges. Firstly, for our algorithm to work, we needed to ensure that the normal vectors actually pointed into the triangle. In order to make this work, we tested the winding order of the vertices using <a href="https://stackoverflow.com/a/1165943" style="display: inline"> this</a> formula. After adjusting our vertices so that they are in counter-clockwise order, we had to sample our pixels. Here lies our second, and final, bug that our code had: bounding boxes. Initially, we made it so that the bounding box would round our minimum and maximum values of x and y, which caused many triangles to not render fully, as shown below:</p>
-		<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw1/images/rounding_error.png" alt="Rounding Error" class="center">
-		<p style="color: #DBDEE1; width: 100%">    By addressing these issues, we got basic rasterizing to work! Below is an image of a successful render highlighting a major drawback with this algorithm, aliasing, in basic/test4.svg:</p>
-		<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw1/images/svg4_pixel_inspector.png" alt="svg4 Aliased" class="center">
-		<p style="color: #DBDEE1; width: 100%">    For the extra credit, we found a few ways to optimize the rendering script, mostly through precalculation of equations. Our original rendering method was already decently efficient, but it had one large drawback: we were doing a lot of calculation within the for loops. So, we decided to move the calculations of all the vectors out of the nested loops. The vectors that were the most complex to precalculate were p-p0, p-p1, and p-p2, since these had to change each loop. But, these can be set by simply doing a few additions each loop, as opposed to using expensive multiplication. As can be seen by the image below, the new code was about 12% faster.</p>
-		<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw1/images/speed_data.png" class="center">
+		<h3><b>Overview</b></h3>
+		<p style="color: #DBDEE1; width: 100%">This is the glorious overview. </p>
 		<br>
-		<h3><b>Antialiasing by Supersampling</b></h3>
+		
+		<h3><b>Part 1: Bezier Curves with 1D de Casteljau Subdivision</b></h3>
+		<p style="color: #DBDEE1; width: 100%">blah blah blah blah blah.</p>
+		<br>
+		<h3><b>Part 2: Bezier Surfaces with Separable 1D de Casteljau</b></h3>
 		<p style="color: #DBDEE1; width: 100%">    In order to reduce aliasing such as jaggies and floating pixels, we use supersampling. We set a sample rate and sample multiple evenly spaced points inside each pixel, then average them to get the total color of that pixel. This means that if a triangle has some area inside a pixel but doesn’t go through the center, we can still ensure that the figure gets equal representation. For example, if the triangle goes through the top right corner, that would be approximately 1/9 of the pixel’s area, so we would give that pixel 1/9th of the triangle’s color. Initially, we thought it would be more space efficient to keep our screen space array the same dimensions, and simply average down each pixel as we rasterize each triangle. This sounded like a great idea, but when multiple triangles were slightly in a single pixel, this prevented the final pixel color from incorporating all of the triangles involved. Instead, we got weird bright lines cutting through our images. In the end, we decided to multiply the dimensions of our screen space matrix by the sample rate, then rasterize each triangle in our svg by pretending the screen was simply much larger. To draw the matrix onto the screen, we then averaged down for each pixel. Below is an example of supersampling, using 1, 4, and 16 points inside each pixel, reducing aliasing in the same image represented above: </p>
 		<div class="row">
   			<div class="column">
